--- a/style.css
+++ b/style.css
@@ -10,3 +10,51 @@ body {
   font-size: 20px;
   font-weight: bold;
 }
+
+/* About */
+#about {
+  margin: 60px auto;
+  max-width: 400px;
+  text-align: center;
+}
+
+#about img {
+  border-radius: 50%;
+  width: 120px;
+  margin-bottom: 10px;
+}
+
+#about .name {
+  font-size: 19px;
+}
+
+#about .vocation {
+  font-size: 17px;
+  color: #a8a8ab;
+  margin-bottom: 10px;
+}
+
+#about .skills {
+  font-size: 15px;
+  color: #008bae;
+  margin-bottom: 10px;
+}
+
+#about .email {
+  margin-top: 14px;
+  font-size: 14px;
+}
+
+#about,
+.introduction,
+.email {
+  text-align: center;
+}
+
+.icons {
+  text-align: center;
+  color: #000;
+  margin-top: 20px;
+  font-size: 30px;
+  align-items: center;
+}
