--- a/style.css
+++ b/style.css
@@ -25,7 +25,12 @@ a.font-black {
   color: #000 !important;
 }
 
-/* About */
+/**************************
+
+ ABOUT 
+
+**************************/
+
 #about {
   margin: 60px auto;
   max-width: 400px;
@@ -96,7 +101,12 @@ a.font-black {
   margin-right: 10px;
 }
 
-/* PROJECT */
+/**************************
+
+ PROJECTS 
+
+**************************/
+
 #project {
   margin: 64px auto;
   width: 80%;
