--- a/style.css
+++ b/style.css
@@ -107,23 +107,23 @@ a.font-black {
 
 **************************/
 
-#project {
+#projects {
   margin: 64px auto;
   width: 80%;
 }
 
-#project .font-primary {
+#projects .font-primary {
   color: #00abae;
 }
 
-#project h2 {
+#projects h2 {
   text-align: center;
 }
 
-#project .card img {
+#projects .card img {
   width: 100%;
 }
 
-#project .card-title {
+#projects .card-title {
   font-weight: bold;
 }
