--- a/style.css
+++ b/style.css
@@ -127,3 +127,9 @@ a.font-black {
 #projects .card-title {
   font-weight: bold;
 }
+
+#projects .project-video {
+  width: 100%;
+  max-height: 300px;
+  background-color: black;
+}
