--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ a.font-black {
 
 #about img {
   border-radius: 50%;
-  width: 120px;
+  width: 140px;
   margin-bottom: 10px;
 }
 
@@ -64,6 +64,7 @@ a.font-black {
   font-size: 19px;
   font-weight: bolder;
   margin-bottom: 3px;
+  /* text-transform: uppercase; */
 }
 
 #about .vocation {
@@ -79,6 +80,44 @@ a.font-black {
   /* color: #2dcac3; */
   margin-bottom: 10px;
 }
+
+/* ANIMATION */
+
+/* .parent {
+  background-color: #00e0d4;
+  height: 150px;
+  width: 400px;
+}
+
+.child {
+  height: 25%;
+  width: 50%;
+}
+
+.parent:hover .child {
+  animation: left-to-right 2s ease-in forwards;
+  /* animation-fill-mode: forwards; */
+}
+
+@keyframes left-to-right {
+  0% {
+    transform: translateX(0);
+  }
+
+  33% {
+    transform: translateY(100%);
+  }
+
+  66% {
+    transform: translateX(100%) translateY(100%);
+  }
+
+  100% {
+  
+    transform: translateX(100%);
+  }
+} */
+/* END ANIMATION */
 
 .skills {
   color: #00e0d4;
@@ -160,3 +199,9 @@ a.font-black {
   background-color: #00e0d4;
   border: none;
 }
+
+
+
+
+/* DIGITAL MEDIA PAGE */
+
