--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
   color: #eaeff2;
 }
 
+.nav-item {
+  color: #00e0d4;
+}
+
 body {
   /* font-family: "monospace", sans-serif; */
   font-family: "Poppins", sans-serif;
